[package]
name = "picbad"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart"] }
base64 = "0.22"
bytes = "1.6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "5.5"
futures-util = "0.3"
gif = "0.13"
hex = "0.4"
ico = "0.3"
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp", "avif", "ico"] }
mime = "0.3"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
thiserror = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.10"
